--- a/css/main.css
+++ b/css/main.css
@@ -19,13 +19,15 @@ img {
 }
 
 .wrapper {
-    background: linear-gradient(360deg,rgb(238, 243, 247) 0%, rgb(221, 224, 230) 100%);
+    background: linear-gradient(360deg,rgb(255, 255, 255) 0%, rgb(221, 224, 230) 100%);
     width:100% ;
 
 }
 
+
 .container {
-    width: 1600px;
+    min-width: 1200px;
+    width: 80%;
     margin: 0 auto;
 }
 
@@ -52,6 +54,7 @@ header nav ul li {
     font-weight: 600;
     padding-top: 20px;
     font-size: 140%;
+    white-space: nowrap;
 }
 
 header nav ul li a {
@@ -94,7 +97,7 @@ position:relative;
 z-index: 1;
 }
 .hero--info {
-    width:auto;
+    width: 1600px;;
     padding-top: 10px;
 }
 
@@ -102,6 +105,7 @@ z-index: 1;
     font-size: 90px;
     font-weight: 600;
     font-family: cursive;
+    white-space: nowrap;
 
 }
 
@@ -110,8 +114,7 @@ z-index: 1;
     font-weight: 450;
     font-family: cursive;
     padding-top: 100px;
-    
-
+    white-space: nowrap;
 }
 
 .hero--info p {
@@ -120,6 +123,7 @@ z-index: 1;
     padding-top: 5px;
     font-family: cursive;
     padding-bottom: 10%;
+    white-space: nowrap;
 
 }
 
@@ -139,19 +143,21 @@ z-index: 1;
 
 
 .hero img {
-    position:absolute;
-    top: 820px;
-    left:40%;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    top: 1020px;
     max-width: 400px;
     border-radius: 10px;
-    
+    display: block;
 
 }
 
 .hero li a {
-    position:absolute;
-    top: 1240px;
-    left:40%;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    top: 1270px;
     max-width: 400px;
     border-radius: 5px;
     background: #2d2b33;
@@ -160,6 +166,7 @@ z-index: 1;
     border:0;
     font-size: 20px;
     padding-left: 10%;
+    white-space: nowrap;
     
 
 }
@@ -169,7 +176,9 @@ z-index: 1;
     font-weight: 550;
     font-family: cursive;
     padding-top: 110px;
-    padding-left: 39%;
+    white-space: nowrap;
+    text-align: center;
+    white-space: nowrap;
     
 
 }
@@ -181,6 +190,7 @@ z-index: 1;
     font-weight: 480;
     font-family: cursive;
     padding-top: 50px;
+    white-space: nowrap;
 
 }
 
@@ -192,9 +202,11 @@ z-index: 1;
     padding-top: 5px;
     font-family: cursive;
     padding-bottom: 10%;
+    white-space: nowrap;
 }
 
 .Id_0 textarea {
+    left:200px;
     position:absolute;
     top:180px;
     font-size: 30px;
@@ -206,7 +218,8 @@ z-index: 1;
     outline: none;
     padding-left: 2%;
     padding-bottom: 10%;
-    color:#1e1f20   
+    color:#1e1f20;
+    white-space: nowrap;
 }
 
 
@@ -217,6 +230,7 @@ z-index: 1;
     font-weight: 480;
     font-family: cursive;
     padding-top: 50px;
+    white-space: nowrap;
 
 }
 
@@ -228,4 +242,6 @@ z-index: 1;
     padding-top: 5px;
     font-family: cursive;
     padding-bottom: 10%;
+    white-space: nowrap;
+
 }
