--- a/css/main3.css
+++ b/css/main3.css
@@ -19,13 +19,15 @@ img {
 }
 
 .wrapper {
-    background: linear-gradient(360deg,rgb(238, 243, 247) 0%, rgb(221, 224, 230) 100%);
+    background: linear-gradient(360deg,rgb(255, 255, 255) 0%, rgb(221, 224, 230) 100%);
     width:100% ;
 
 }
 
+
 .container {
-    width: 1600px;
+    min-width: 1200px;
+    width: 80%;
     margin: 0 auto;
 }
 
@@ -52,6 +54,7 @@ header nav ul li {
     font-weight: 600;
     padding-top: 20px;
     font-size: 140%;
+    white-space: nowrap;
 }
 
 header nav ul li a {
@@ -88,25 +91,45 @@ header nav  {
 
 
 
-
-.hero--inf li a {
+.hero {
+    min-width: 1200px;
+    width: 190%;
+    top: 250px;
     position:absolute;
-    top: 1240px;
-    left:40%;
-    max-width: 400px;
-    border-radius: 5px;
-    background: #2d2b33;
-    color:#dee3e8;
-    padding:10px 165px;
-    border:0;
-    font-size: 20px;
-    padding-left: 10%;
+    margin: 0 auto;
+
 }
 
+.hero2 {
+    min-width: 1200px;
+    width: 190%;
+    top: 750px;
+    position:absolute;
+    margin: 0 auto;
+
+}
+
+.hero3 {
+    min-width: 1200px;
+    width: 190%;
+    top: 600px;
+    position:absolute;
+    margin: 0 auto;
+
+}
+
+.hero00 {
+    min-width: 1200px;
+    left: auto;
+    top: 150px;
+    position:absolute;
+    margin: 0 auto;
+
+}
 .hero img {
     position:absolute;
-    top: 120px;
     left:20%;
+    margin-left: auto;
     max-width: 400px;
     border-radius: 10px;
     
@@ -115,35 +138,72 @@ header nav  {
 
 .hero2 img {
     position:absolute;
-    top: 120px;
-    left:60%;
+    left:20%;
     max-width: 400px;
     border-radius: 10px;
-    
+    margin-left: auto;
 
 }
 
 .Id_0 li a{
     position:absolute;
-    top: 540px;
+    top: 420px;
     left:20%;
     border-radius: 5px;
     background: #2d2b33;
     color:#dee3e8;
     padding:10px 137px;
     font-size: 20px;
+    white-space: nowrap;
 
 }
 
 .Id_1 li a{
     position:absolute;
-    top: 540px;
-    left:60%;
+    top: 470px;
+    left:20%;
     border-radius: 5px;
     background: #2d2b33;
     color:#dee3e8;
     padding:10px 120px;
     font-size: 20px;
+    white-space: nowrap;
     
+
+}
+
+
+.hero3 img {
+    position:absolute;
+    top: 670px;
+    left:20%;
+    max-width: 400px;
+    border-radius: 10px;
+    
+
+}
+
+
+.Id_2 li a{
+    position:absolute;
+    top: 1090px;
+    left:20%;
+    border-radius: 5px;
+    background: #2d2b33;
+    color:#dee3e8;
+    padding:10px 137px;
+    font-size: 20px;
+    white-space: nowrap;
+    
+
+}
+
+.hero00--info h2 {
+    position:absolute;
+    left: 52%;
+    font-size: 70px;
+    font-weight: 600;
+    font-family: cursive;
+    white-space: nowrap;
 
 }
