--- a/css/main2.css
+++ b/css/main2.css
@@ -19,13 +19,15 @@ img {
 }
 
 .wrapper {
-    background: linear-gradient(360deg,rgb(238, 243, 247) 0%, rgb(221, 224, 230) 100%);
+    background: linear-gradient(360deg,rgb(255, 255, 255) 0%, rgb(221, 224, 230) 100%);
     width:100% ;
 
 }
 
+
 .container {
-    width: 1600px;
+    min-width: auto;
+    width: 80%;
     margin: 0 auto;
 }
 
@@ -49,6 +51,10 @@ header nav ul {
 
 header nav ul li {
     display: inline-block;
+    font-weight: 600;
+    padding-top: 20px;
+    font-size: 140%;
+    white-space: nowrap;
 }
 
 header nav ul li a {
@@ -78,6 +84,55 @@ header nav  {
     border-radius: 10px;
     position: relative;
     top: -30px;
-    block-size: 50px;    
+    block-size: 70px;
+      
 
+}
+
+
+
+
+
+
+
+h1 {
+    text-align: center;
+    font-size: 75px;
+    font-weight: 400;
+    padding-top: 50px;
+    font-family: cursive;
+    padding-bottom: 10%;
+    padding-top: 7%;
+    white-space: nowrap;
+}
+form p {
+    text-align: center;
+    font-size: 50px;
+    font-weight: 400;
+    padding-top: 30px;
+    font-family: cursive;
+    padding-bottom: 10%;
+    white-space: nowrap;
+}
+form label {
+    text-align: center;
+    font-size: 30px;
+    font-weight: 400;
+    padding-top: 10px;
+    font-family: cursive;
+    padding-bottom: 10%;
+    white-space: nowrap;
+}
+form button {
+    position: absolute;
+    font-size: 20px;
+    white-space: nowrap;
+    width: 30%;
+    padding: 15px;
+    transform: translate(-47%);
+    left:50%;
+    border-radius: 10px;
+}
+form h2 {
+    padding-bottom: 150px;
 }
