--- a/css/main4.css
+++ b/css/main4.css
@@ -19,13 +19,15 @@ img {
 }
 
 .wrapper {
-    background: linear-gradient(360deg,rgb(238, 243, 247) 0%, rgb(221, 224, 230) 100%);
+    background: linear-gradient(360deg,rgb(255, 255, 255) 0%, rgb(221, 224, 230) 100%);
     width:100% ;
 
 }
 
+
 .container {
-    width: 1600px;
+    min-width: auto;
+    width: 80%;
     margin: 0 auto;
 }
 
@@ -49,6 +51,10 @@ header nav ul {
 
 header nav ul li {
     display: inline-block;
+    font-weight: 600;
+    padding-top: 20px;
+    font-size: 140%;
+    white-space: nowrap;
 }
 
 header nav ul li a {
@@ -78,6 +84,73 @@ header nav  {
     border-radius: 10px;
     position: relative;
     top: -30px;
-    block-size: 50px;    
+    block-size: 70px;    
 
+}
+
+
+
+
+
+
+.hero00 {
+    width: 100%;
+    left: auto;
+    top: 150px;
+    position:absolute;
+    margin: 0 auto;
+
+}
+.hero00--info h2 {
+    text-align: center;
+    font-size: 70px;
+    font-weight: 600;
+    font-family: cursive;
+    white-space: nowrap;
+
+}
+.hero1 {
+    width: 100%;
+    left: auto;
+    top: 400px;
+    position:absolute;
+    margin: 0 auto;
+    padding-bottom: 400px;
+
+}
+.hero1--info h2 {
+    text-align: center;
+    font-size: 50px;
+    font-weight: 20px;
+    white-space: nowrap;
+    
+}
+.hero1--info h1 {
+    padding-top: 20px;
+    text-align: center;
+    font-size: 30px;
+    font-weight: 20px;
+    white-space: nowrap;
+}
+.hero1--info h3 {
+    padding-top: 40px;
+    text-align: center;
+    font-size: 30px;
+    font-weight: 30px;
+    white-space: nowrap;
+    color: #1275c5;
+}
+.hero1--info h4 {
+    padding-top: 20px;
+    text-align: center;
+    font-size: 30px;
+    font-weight: 20px;
+    white-space: nowrap;
+}
+.hero1--info h5 {
+    padding-top: 20px;
+    text-align: center;
+    font-size: 30px;
+    font-weight: 20px;
+    white-space: nowrap;
 }
