--- a/css/main5.css
+++ b/css/main5.css
@@ -19,13 +19,15 @@ img {
 }
 
 .wrapper {
-    background: linear-gradient(360deg,rgb(238, 243, 247) 0%, rgb(221, 224, 230) 100%);
+    background: linear-gradient(360deg,rgb(255, 255, 255) 0%, rgb(221, 224, 230) 100%);
     width:100% ;
 
 }
 
+
 .container {
-    width: 1600px;
+    min-width: auto;
+    width: 80%;
     margin: 0 auto;
 }
 
@@ -49,6 +51,10 @@ header nav ul {
 
 header nav ul li {
     display: inline-block;
+    font-weight: 600;
+    padding-top: 20px;
+    font-size: 140%;
+    white-space: nowrap;
 }
 
 header nav ul li a {
@@ -78,6 +84,6 @@ header nav  {
     border-radius: 10px;
     position: relative;
     top: -30px;
-    block-size: 50px;    
+    block-size: 70px;    
 
 }
