--- a/css/main5.css
+++ b/css/main5.css
@@ -87,3 +87,58 @@ header nav  {
     block-size: 70px;    
 
 }
+
+
+
+
+.hero00 {
+    width: 100%;
+    left: auto;
+    top: 200px;
+    position:absolute;
+    margin: 0 auto;
+
+}
+.hero00--info h2 {
+    text-align: center;
+    font-size: 25px;
+    font-weight: 600;
+    font-family: cursive;
+    white-space: nowrap;
+
+}
+
+
+
+.hero1 {
+    width: 100%;
+    left: auto;
+    top: 550px;
+    position:absolute;
+    margin: 0 auto;
+
+}
+.hero1--info h2 {
+    text-align: center;
+    font-size: 25px;
+    font-weight: 600;
+    font-family: cursive;
+    white-space: nowrap;
+
+}
+.hero1 li a {
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    top: 110px;
+    max-width: 400px;
+    border-radius: 7px;
+    background: #2d2b33;
+    color:#dee3e8;
+    padding:10px 165px;
+    font-size: 20px;
+    text-align: center;
+    white-space: nowrap;
+    
+
+}
