--- a/css/main3.css
+++ b/css/main3.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    font-family: "Sofia Sans Semi Condensed", sans-serif;
+    font-family: sans-serif;
     font-weight: 400;
     color: #1e1f20;
 }
@@ -27,12 +27,12 @@ img {
 
 .container {
     min-width: auto;
-    width: 80%;
+    width: 90%;
     margin: 0 auto;
 }
 
 header {
-    padding: 50px 0;
+    padding: 0px 0;
 }
 
 
@@ -42,23 +42,36 @@ header nav {
 }
 
 header nav ul {
-    list-style: none;
     display:flex;
-    justify-content:space-around;
+    justify-content:center;
     z-index: 2;
     position: relative
+}
+
+header nav ul h1 {
+    display: block;
+    width: 50px;
+}
+header nav ul h2 {
+    display: block;
+    width: 95px;
+    max-height: 0px;
 }
 
 header nav ul li {
     display: inline-block;
     font-weight: 600;
     padding-top: 20px;
-    font-size: 140%;
+    font-size: 120%;
     white-space: nowrap;
+
+
 }
 
+
 header nav ul li a {
-    color: #dee3e8; ;
+    color: #dee3e8;
+    text-align: center;
 }
 
 header nav ul li:not(.active):not(.btn) a:hover {
@@ -83,9 +96,14 @@ header nav  {
     background:#2d2b33 ;
     border-radius: 10px;
     position: relative;
-    top: -30px;
-    block-size: 70px;    
-
+    top: 10px;
+    block-size: 60px; 
+}
+h1 {
+    padding-bottom: 10px;
+}
+h4 {
+    padding-bottom: 100px;
 }
 
 
@@ -93,7 +111,7 @@ header nav  {
 
 .hero {
     width: 100%;
-    top: 300px;
+    top: 500px;
     position:absolute;
     margin: 0 auto;
 
@@ -101,7 +119,7 @@ header nav  {
 
 .hero2 {
     width: 100%;
-    top: 300px;
+    top: 900px;
     position:absolute;
     margin: 0 auto;
 
@@ -109,7 +127,7 @@ header nav  {
 
 .hero3 {
     width: 100%;
-    top: 300px;
+    top: 1300px;
     position:absolute;
     margin: 0 auto;
 
@@ -117,22 +135,30 @@ header nav  {
 
 .hero4 {
     width: 100%;
-    top: 800px;
+    top: 1700px;
     position:absolute;
     margin: 0 auto;
+
 }
 .hero5 {
     width: 100%;
-    top: 800px;
+    top: 2100px;
+    position:absolute;
+    margin: 0 auto;
+
+}
+.hero6 {
+    width: 100%;
+    top: 2500px;
     position:absolute;
     margin: 0 auto;
     padding-bottom: 600px;
-}
 
+}
 .hero00 {
     width: 100%;
     left: auto;
-    top: 150px;
+    top: 300px;
     position:absolute;
     margin: 0 auto;
 
@@ -141,8 +167,8 @@ header nav  {
     position:absolute;
     transform: translate(-50%);
     width: auto;
-    left:25%;
-    max-width: 400px;
+    left:50%;
+    max-width: 300px;
     border-radius: 10px;
     border: 10px solid #2d2b33;
 
@@ -151,21 +177,21 @@ header nav  {
 .hero2 img {
     position:absolute;
     transform: translate(-50%);
+    width: auto;
     left:50%;
-    max-width: 400px;
+    max-width: 300px;
     border-radius: 10px;
-    margin-left: auto;
     border: 10px solid #2d2b33;
 }
 
 .Id_0 li a{
     position:absolute;
-    top: 430px;
-    left:25%;
+    top: 330px;
+    left:50%;
     border-radius: 5px;
     background: #2d2b33;
     color:#dee3e8;
-    padding:10px 146px;
+    padding:10px 110px;
     font-size: 20px;
     white-space: nowrap;
     transform: translate(-50%);
@@ -174,12 +200,12 @@ header nav  {
 
 .Id_1 li a{
     position:absolute;
-    top: 430px;
+    top: 330px;
     left:50%;
     border-radius: 5px;
     background: #2d2b33;
     color:#dee3e8;
-    padding:10px 125px;
+    padding:10px 90px;
     font-size: 20px;
     white-space: nowrap;
     transform: translate(-50%);
@@ -190,8 +216,8 @@ header nav  {
 .hero3 img {
     position:absolute;
     transform: translate(-50%);
-    left:75%;
-    max-width: 400px;
+    left:50%;
+    max-width: 300px;
     border-radius: 10px;
     margin-left: auto;
     border: 10px solid #2d2b33;
@@ -200,12 +226,12 @@ header nav  {
 
 .Id_2 li a{
     position:absolute;
-    top: 430px;
-    left:75%;
+    top: 330px;
+    left:50%;
     border-radius: 5px;
     background: #2d2b33;
     color:#dee3e8;
-    padding:10px 140px;
+    padding:10px 110px;
     font-size: 20px;
     white-space: nowrap;
     transform: translate(-50%);
@@ -215,8 +241,8 @@ header nav  {
 .hero4 img {
     position:absolute;
     transform: translate(-50%);
-    left:25%;
-    max-width: 400px;
+    left:50%;
+    max-width: 300px;
     border-radius: 10px;
     margin-left: auto;
     border: 10px solid #2d2b33;
@@ -224,12 +250,35 @@ header nav  {
 
 .Id_3 li a{
     position:absolute;
-    top: 430px;
-    left:25%;
+    top: 330px;
+    left:50%;
     border-radius: 5px;
     background: #2d2b33;
     color:#dee3e8;
-    padding:10px 137px;
+    padding:10px 100px;
+    font-size: 20px;
+    white-space: nowrap;
+    transform: translate(-50%);
+
+}
+
+.hero5 img {
+    position:absolute;
+    transform: translate(-50%);
+    width: auto;
+    left:50%;
+    max-width: 300px;
+    border-radius: 10px;
+    border: 10px solid #2d2b33;
+}
+.Id_4 li a{
+    position:absolute;
+    top: 330px;
+    left:50%;
+    border-radius: 5px;
+    background: #2d2b33;
+    color:#dee3e8;
+    padding:10px 140px;
     font-size: 20px;
     white-space: nowrap;
     transform: translate(-50%);
@@ -239,27 +288,26 @@ header nav  {
     text-align: center;
     font-size: 70px;
     font-weight: 600;
-    font-family: cursive;
     white-space: nowrap;
 
 }
-.hero5 img {
+.hero6 img {
     position:absolute;
     transform: translate(-50%);
+    width: auto;
     left:50%;
-    max-width: 400px;
+    max-width: 300px;
     border-radius: 10px;
-    margin-left: auto;
     border: 10px solid #2d2b33;
 }
-.Id_4 li a{
+.Id_5 li a{
     position:absolute;
-    top: 430px;
+    top: 330px;
     left:50%;
     border-radius: 5px;
     background: #2d2b33;
     color:#dee3e8;
-    padding:10px 173px;
+    padding:10px 100px;
     font-size: 20px;
     white-space: nowrap;
     transform: translate(-50%);
