--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    font-family: "Sofia Sans Semi Condensed", sans-serif;
+    font-family: sans-serif;
     font-weight: 400;
     color: #1e1f20;
 }
@@ -27,12 +27,12 @@ img {
 
 .container {
     min-width: auto;
-    width: 80%;
+    width: 90%;
     margin: 0 auto;
 }
 
 header {
-    padding: 50px 0;
+    padding: 0px 0;
 }
 
 
@@ -42,23 +42,35 @@ header nav {
 }
 
 header nav ul {
-    list-style: none;
     display:flex;
-    justify-content:space-around;
+    justify-content:center;
     z-index: 2;
     position: relative
+}
+
+header nav ul h1 {
+    display: block;
+    width: 50px;
+}
+header nav ul h2 {
+    display: block;
+    width: 95px;
 }
 
 header nav ul li {
     display: inline-block;
     font-weight: 600;
     padding-top: 20px;
-    font-size: 140%;
+    font-size: 120%;
     white-space: nowrap;
+
+
 }
 
+
 header nav ul li a {
-    color: #dee3e8; ;
+    color: #dee3e8;
+    text-align: center;
 }
 
 header nav ul li:not(.active):not(.btn) a:hover {
@@ -83,10 +95,13 @@ header nav  {
     background:#2d2b33 ;
     border-radius: 10px;
     position: relative;
-    top: -30px;
-    block-size: 70px;    
-
+    top: 10px;
+    block-size: 60px; 
 }
+h1 {
+    padding-bottom: 10px;
+}
+
 
 
 
@@ -98,37 +113,38 @@ z-index: 1;
 list-style-type: none;
 }
 .hero--info {
-    width: 1600px;;
-    padding-top: 10px;
+    width: auto;;
+    padding-top: 80px;
 }
 
 .hero--info h2 {
-    font-size: 90px;
-    font-weight: 600;
+    font-size: 75px;
     font-family: cursive;
     white-space: nowrap;
+    font-weight: 1000;
+    padding-top: 20px;
+    white-space: nowrap;
+    text-align: center;
 
 }
 
 .hero--info h1 {
-    font-size: 60px;
-    font-weight: 450;
-    font-family: cursive;
-    padding-top: 100px;
+    font-size: 40px;
+    font-weight: 550;
+    padding-top: 60px;
     white-space: nowrap;
+    text-align: center;
 }
 
 .hero--info p {
-    font-size: 35px;
-    font-weight: 400;
+    font-size: 25px;
+    font-weight: 550;
     padding-top: 5px;
-    font-family: cursive;
-    padding-bottom: 10%;
+    padding-bottom: 5%;
     white-space: nowrap;
+    text-align: center;
 
 }
-
-
 
 
 
@@ -137,7 +153,7 @@ list-style-type: none;
     content: '';
     background:#2d2b33;
     border-radius: 15px;
-    block-size: 80px;
+    block-size: 10px;
     
 
 }
@@ -147,25 +163,23 @@ list-style-type: none;
     position: absolute;
     left: 50%;
     transform: translate(-50%, -50%);
-    top: 1040px;
-    max-width: 400px;
+    top: 840px;
+    width: 300px;
     border-radius: 10px;
     display: block;
     border: 10px solid #2d2b33;
-
 }
 
 .hero li a {
     position: absolute;
     left: 50%;
     transform: translate(-50%, -50%);
-    top: 1290px;
-    max-width: 400px;
+    top: 970px;
+    width: 300px;
     border-radius: 5px;
     background: #2d2b33;
     color:#dee3e8;
-    padding:10px 165px;
-    border:0;
+    padding:10px;
     font-size: 20px;
     text-align: center;
     white-space: nowrap;
@@ -174,10 +188,10 @@ list-style-type: none;
 }
 
 .hero h4 {
-    font-size: 65px;
+    font-size: 45px;
     font-weight: 550;
     font-family: cursive;
-    padding-top: 120px;
+    padding-top: 150px;
     white-space: nowrap;
     text-align: center;
     white-space: nowrap;
@@ -187,39 +201,41 @@ list-style-type: none;
 
 .Id_0 h5 {
     text-align: center;
-    font-size: 60px;
-    font-weight: 480;
+    font-size: 35px;
+    font-weight: 580;
     font-family: cursive;
-    padding-top: 50px;
+    padding-top: 150px;
     white-space: nowrap;
 
 }
 
 .Id_0 h6 {
     text-align: center;
-    font-size: 35px;
-    font-weight: 400;
+    font-size: 25px;
+    font-weight: 500;
     padding-top: 5px;
     font-family: cursive;
-    padding-bottom: 10%;
     white-space: nowrap;
 }
 
 .Id_0 textarea {
-    width: 1500px;
+    padding-left: 4px;
+    text-align: justify;
+    width: 300px;
     position:absolute;
     top:300px;
     left: 50%;
-    font-size: 30px;
-    padding-top: 50px;
-    font-family: cursive;
-    resize: none;
+    font-size: 9px;
+    padding-top: 20px;
     border-color: #1e1f20;
     outline: none;
-    padding-left: 2%;
-    padding-bottom: 15%;
+    padding-left: 10px;
+    padding-right: 10px;
     color:#1e1f20;
     white-space: nowrap;
     transform: translate(-50%);
 }
-
+.Id_1 h1 {
+    padding-top:250px;
+    
+}
