--- a/css/main2.css
+++ b/css/main2.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    font-family: "Sofia Sans Semi Condensed", sans-serif;
+    font-family: sans-serif;
     font-weight: 400;
     color: #1e1f20;
 }
@@ -27,12 +27,12 @@ img {
 
 .container {
     min-width: auto;
-    width: 80%;
+    width: 90%;
     margin: 0 auto;
 }
 
 header {
-    padding: 50px 0;
+    padding: 0px 0;
 }
 
 
@@ -42,23 +42,36 @@ header nav {
 }
 
 header nav ul {
-    list-style: none;
     display:flex;
-    justify-content:space-around;
+    justify-content:center;
     z-index: 2;
     position: relative
+}
+
+header nav ul h1 {
+    display: block;
+    width: 50px;
+}
+header nav ul h2 {
+    display: block;
+    width: 95px;
+    max-height: 0px;
 }
 
 header nav ul li {
     display: inline-block;
     font-weight: 600;
     padding-top: 20px;
-    font-size: 140%;
+    font-size: 120%;
     white-space: nowrap;
+
+
 }
 
+
 header nav ul li a {
-    color: #dee3e8; ;
+    color: #dee3e8;
+    text-align: center;
 }
 
 header nav ul li:not(.active):not(.btn) a:hover {
@@ -83,36 +96,43 @@ header nav  {
     background:#2d2b33 ;
     border-radius: 10px;
     position: relative;
-    top: -30px;
-    block-size: 70px;
-      
-
+    top: 10px;
+    block-size: 60px; 
+}
+h1 {
+    padding-bottom: 10px;
+}
+h4 {
+    padding-bottom: 100px;
 }
 
 
 
 
+.hero {
+position:relative;
+z-index: 1;
+list-style-type: none;
+}
 
-
-
-h1 {
+.hero h3 {
     text-align: center;
     font-size: 75px;
-    font-weight: 700;
+    font-weight: 1000;
     padding-top: 50px;
     font-family: cursive;
-    padding-bottom: 10%;
-    padding-top: 7%;
+    padding-bottom: 40%;
     white-space: nowrap;
+    padding-top: 30%;
+
 }
 h2 {
+    width: auto;
     content: '';
     position: absolute;
     display: block;
-    width: auto;
     background:#2d2b33 ;
-    border-radius: 10px;
     position: relative;
-    top: -3px;
-    block-size: 45px;
+    top: -2px;
+    block-size: 15px;
 }
