--- a/css/main5.css
+++ b/css/main5.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    font-family: "Sofia Sans Semi Condensed", sans-serif;
+    font-family: sans-serif;
     font-weight: 400;
     color: #1e1f20;
 }
@@ -27,12 +27,12 @@ img {
 
 .container {
     min-width: auto;
-    width: 80%;
+    width: 90%;
     margin: 0 auto;
 }
 
 header {
-    padding: 50px 0;
+    padding: 0px 0;
 }
 
 
@@ -42,23 +42,36 @@ header nav {
 }
 
 header nav ul {
-    list-style: none;
     display:flex;
-    justify-content:space-around;
+    justify-content:center;
     z-index: 2;
     position: relative
+}
+
+header nav ul h1 {
+    display: block;
+    width: 50px;
+}
+header nav ul h2 {
+    display: block;
+    width: 95px;
+    max-height: 0px;
 }
 
 header nav ul li {
     display: inline-block;
     font-weight: 600;
     padding-top: 20px;
-    font-size: 140%;
+    font-size: 120%;
     white-space: nowrap;
+
+
 }
 
+
 header nav ul li a {
-    color: #dee3e8; ;
+    color: #dee3e8;
+    text-align: center;
 }
 
 header nav ul li:not(.active):not(.btn) a:hover {
@@ -83,9 +96,14 @@ header nav  {
     background:#2d2b33 ;
     border-radius: 10px;
     position: relative;
-    top: -30px;
-    block-size: 70px;    
-
+    top: 10px;
+    block-size: 60px; 
+}
+h1 {
+    padding-bottom: 10px;
+}
+h4 {
+    padding-bottom: 100px;
 }
 
 
@@ -94,16 +112,15 @@ header nav  {
 .hero00 {
     width: 100%;
     left: auto;
-    top: 200px;
+    top: 300px;
     position:absolute;
     margin: 0 auto;
 
 }
 .hero00--info h2 {
     text-align: center;
-    font-size: 25px;
-    font-weight: 600;
-    font-family: cursive;
+    font-size: 14px;
+    font-weight: 800;
     white-space: nowrap;
 
 }
@@ -113,16 +130,15 @@ header nav  {
 .hero1 {
     width: 100%;
     left: auto;
-    top: 550px;
+    top: 650px;
     position:absolute;
     margin: 0 auto;
 
 }
 .hero1--info h2 {
     text-align: center;
-    font-size: 25px;
-    font-weight: 600;
-    font-family: cursive;
+    font-size: 14px;
+    font-weight: 800;
     white-space: nowrap;
 
 }
@@ -130,15 +146,17 @@ header nav  {
     position: absolute;
     left: 50%;
     transform: translate(-50%, -50%);
-    top: 120px;
-    max-width: 400px;
-    border-radius: 7px;
+    top: 170px;
+    width: 300px;
+    border-radius: 5px;
     background: #2d2b33;
     color:#dee3e8;
-    padding:10px 165px;
+    padding:10px;
     font-size: 20px;
     text-align: center;
     white-space: nowrap;
-    
+}
 
+h3 {
+    padding-bottom: 200px;
 }
