--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    font-family: sans-serif;
+    font-family: "Sofia Sans Semi Condensed", sans-serif;
     font-weight: 400;
     color: #1e1f20;
 }
@@ -27,12 +27,12 @@ img {
 
 .container {
     min-width: auto;
-    width: 90%;
+    width: 80%;
     margin: 0 auto;
 }
 
 header {
-    padding: 0px 0;
+    padding: 50px 0;
 }
 
 
@@ -42,35 +42,23 @@ header nav {
 }
 
 header nav ul {
+    list-style: none;
     display:flex;
-    justify-content:center;
+    justify-content:space-around;
     z-index: 2;
     position: relative
-}
-
-header nav ul h1 {
-    display: block;
-    width: 50px;
-}
-header nav ul h2 {
-    display: block;
-    width: 95px;
 }
 
 header nav ul li {
     display: inline-block;
     font-weight: 600;
     padding-top: 20px;
-    font-size: 120%;
+    font-size: 140%;
     white-space: nowrap;
-
-
 }
 
-
 header nav ul li a {
-    color: #dee3e8;
-    text-align: center;
+    color: #dee3e8; ;
 }
 
 header nav ul li:not(.active):not(.btn) a:hover {
@@ -95,13 +83,10 @@ header nav  {
     background:#2d2b33 ;
     border-radius: 10px;
     position: relative;
-    top: 10px;
-    block-size: 60px; 
-}
-h1 {
-    padding-bottom: 10px;
-}
+    top: -30px;
+    block-size: 70px;    
 
+}
 
 
 
@@ -113,38 +98,37 @@ z-index: 1;
 list-style-type: none;
 }
 .hero--info {
-    width: auto;;
-    padding-top: 80px;
+    width: 1600px;;
+    padding-top: 10px;
 }
 
 .hero--info h2 {
-    font-size: 75px;
+    font-size: 90px;
+    font-weight: 600;
     font-family: cursive;
     white-space: nowrap;
-    font-weight: 1000;
-    padding-top: 20px;
-    white-space: nowrap;
-    text-align: center;
 
 }
 
 .hero--info h1 {
-    font-size: 40px;
-    font-weight: 550;
-    padding-top: 60px;
+    font-size: 60px;
+    font-weight: 450;
+    font-family: cursive;
+    padding-top: 100px;
     white-space: nowrap;
-    text-align: center;
 }
 
 .hero--info p {
-    font-size: 25px;
-    font-weight: 550;
+    font-size: 35px;
+    font-weight: 400;
     padding-top: 5px;
-    padding-bottom: 5%;
+    font-family: cursive;
+    padding-bottom: 10%;
     white-space: nowrap;
-    text-align: center;
 
 }
+
+
 
 
 
@@ -153,7 +137,7 @@ list-style-type: none;
     content: '';
     background:#2d2b33;
     border-radius: 15px;
-    block-size: 10px;
+    block-size: 80px;
     
 
 }
@@ -163,23 +147,25 @@ list-style-type: none;
     position: absolute;
     left: 50%;
     transform: translate(-50%, -50%);
-    top: 840px;
-    width: 300px;
+    top: 1040px;
+    max-width: 400px;
     border-radius: 10px;
     display: block;
     border: 10px solid #2d2b33;
+
 }
 
 .hero li a {
     position: absolute;
     left: 50%;
     transform: translate(-50%, -50%);
-    top: 970px;
-    width: 300px;
+    top: 1290px;
+    max-width: 400px;
     border-radius: 5px;
     background: #2d2b33;
     color:#dee3e8;
-    padding:10px;
+    padding:10px 165px;
+    border:0;
     font-size: 20px;
     text-align: center;
     white-space: nowrap;
@@ -188,10 +174,10 @@ list-style-type: none;
 }
 
 .hero h4 {
-    font-size: 45px;
+    font-size: 65px;
     font-weight: 550;
     font-family: cursive;
-    padding-top: 150px;
+    padding-top: 120px;
     white-space: nowrap;
     text-align: center;
     white-space: nowrap;
@@ -201,41 +187,39 @@ list-style-type: none;
 
 .Id_0 h5 {
     text-align: center;
-    font-size: 35px;
-    font-weight: 580;
+    font-size: 60px;
+    font-weight: 480;
     font-family: cursive;
-    padding-top: 150px;
+    padding-top: 50px;
     white-space: nowrap;
 
 }
 
 .Id_0 h6 {
     text-align: center;
-    font-size: 25px;
-    font-weight: 500;
+    font-size: 35px;
+    font-weight: 400;
     padding-top: 5px;
     font-family: cursive;
+    padding-bottom: 10%;
     white-space: nowrap;
 }
 
 .Id_0 textarea {
-    padding-left: 4px;
-    text-align: justify;
-    width: 300px;
+    width: 1500px;
     position:absolute;
     top:300px;
     left: 50%;
-    font-size: 9px;
-    padding-top: 20px;
+    font-size: 30px;
+    padding-top: 50px;
+    font-family: cursive;
+    resize: none;
     border-color: #1e1f20;
     outline: none;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 2%;
+    padding-bottom: 15%;
     color:#1e1f20;
     white-space: nowrap;
     transform: translate(-50%);
 }
-.Id_1 h1 {
-    padding-top:250px;
-    
-}
+
