--- a/css/main2.css
+++ b/css/main2.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    font-family: sans-serif;
+    font-family: "Sofia Sans Semi Condensed", sans-serif;
     font-weight: 400;
     color: #1e1f20;
 }
@@ -27,12 +27,12 @@ img {
 
 .container {
     min-width: auto;
-    width: 90%;
+    width: 80%;
     margin: 0 auto;
 }
 
 header {
-    padding: 0px 0;
+    padding: 50px 0;
 }
 
 
@@ -42,36 +42,23 @@ header nav {
 }
 
 header nav ul {
+    list-style: none;
     display:flex;
-    justify-content:center;
+    justify-content:space-around;
     z-index: 2;
     position: relative
-}
-
-header nav ul h1 {
-    display: block;
-    width: 50px;
-}
-header nav ul h2 {
-    display: block;
-    width: 95px;
-    max-height: 0px;
 }
 
 header nav ul li {
     display: inline-block;
     font-weight: 600;
     padding-top: 20px;
-    font-size: 120%;
+    font-size: 140%;
     white-space: nowrap;
-
-
 }
 
-
 header nav ul li a {
-    color: #dee3e8;
-    text-align: center;
+    color: #dee3e8; ;
 }
 
 header nav ul li:not(.active):not(.btn) a:hover {
@@ -96,43 +83,36 @@ header nav  {
     background:#2d2b33 ;
     border-radius: 10px;
     position: relative;
-    top: 10px;
-    block-size: 60px; 
+    top: -30px;
+    block-size: 70px;
+      
+
 }
+
+
+
+
+
+
+
 h1 {
-    padding-bottom: 10px;
-}
-h4 {
-    padding-bottom: 100px;
-}
-
-
-
-
-.hero {
-position:relative;
-z-index: 1;
-list-style-type: none;
-}
-
-.hero h3 {
     text-align: center;
     font-size: 75px;
-    font-weight: 1000;
+    font-weight: 700;
     padding-top: 50px;
     font-family: cursive;
-    padding-bottom: 40%;
+    padding-bottom: 10%;
+    padding-top: 7%;
     white-space: nowrap;
-    padding-top: 30%;
-
 }
 h2 {
-    width: auto;
     content: '';
     position: absolute;
     display: block;
+    width: auto;
     background:#2d2b33 ;
+    border-radius: 10px;
     position: relative;
-    top: -2px;
-    block-size: 15px;
+    top: -3px;
+    block-size: 45px;
 }
