--- a/css/main5.css
+++ b/css/main5.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    font-family: sans-serif;
+    font-family: "Sofia Sans Semi Condensed", sans-serif;
     font-weight: 400;
     color: #1e1f20;
 }
@@ -27,12 +27,12 @@ img {
 
 .container {
     min-width: auto;
-    width: 90%;
+    width: 80%;
     margin: 0 auto;
 }
 
 header {
-    padding: 0px 0;
+    padding: 50px 0;
 }
 
 
@@ -42,36 +42,23 @@ header nav {
 }
 
 header nav ul {
+    list-style: none;
     display:flex;
-    justify-content:center;
+    justify-content:space-around;
     z-index: 2;
     position: relative
-}
-
-header nav ul h1 {
-    display: block;
-    width: 50px;
-}
-header nav ul h2 {
-    display: block;
-    width: 95px;
-    max-height: 0px;
 }
 
 header nav ul li {
     display: inline-block;
     font-weight: 600;
     padding-top: 20px;
-    font-size: 120%;
+    font-size: 140%;
     white-space: nowrap;
-
-
 }
 
-
 header nav ul li a {
-    color: #dee3e8;
-    text-align: center;
+    color: #dee3e8; ;
 }
 
 header nav ul li:not(.active):not(.btn) a:hover {
@@ -96,14 +83,9 @@ header nav  {
     background:#2d2b33 ;
     border-radius: 10px;
     position: relative;
-    top: 10px;
-    block-size: 60px; 
-}
-h1 {
-    padding-bottom: 10px;
-}
-h4 {
-    padding-bottom: 100px;
+    top: -30px;
+    block-size: 70px;    
+
 }
 
 
@@ -112,15 +94,16 @@ h4 {
 .hero00 {
     width: 100%;
     left: auto;
-    top: 300px;
+    top: 200px;
     position:absolute;
     margin: 0 auto;
 
 }
 .hero00--info h2 {
     text-align: center;
-    font-size: 14px;
-    font-weight: 800;
+    font-size: 25px;
+    font-weight: 600;
+    font-family: cursive;
     white-space: nowrap;
 
 }
@@ -130,15 +113,16 @@ h4 {
 .hero1 {
     width: 100%;
     left: auto;
-    top: 650px;
+    top: 550px;
     position:absolute;
     margin: 0 auto;
 
 }
 .hero1--info h2 {
     text-align: center;
-    font-size: 14px;
-    font-weight: 800;
+    font-size: 25px;
+    font-weight: 600;
+    font-family: cursive;
     white-space: nowrap;
 
 }
@@ -146,17 +130,15 @@ h4 {
     position: absolute;
     left: 50%;
     transform: translate(-50%, -50%);
-    top: 170px;
-    width: 300px;
-    border-radius: 5px;
+    top: 120px;
+    max-width: 400px;
+    border-radius: 7px;
     background: #2d2b33;
     color:#dee3e8;
-    padding:10px;
+    padding:10px 165px;
     font-size: 20px;
     text-align: center;
     white-space: nowrap;
-}
+    
 
-h3 {
-    padding-bottom: 200px;
 }
