--- a/css/main3.css
+++ b/css/main3.css
@@ -128,6 +128,12 @@ header nav  {
     margin: 0 auto;
     padding-bottom: 600px;
 }
+.hero6 {
+    width: 100%;
+    top: 800px;
+    position:absolute;
+    margin: 0 auto;
+}
 
 .hero00 {
     width: 100%;
@@ -142,7 +148,7 @@ header nav  {
     transform: translate(-50%);
     width: auto;
     left:25%;
-    max-width: 400px;
+    max-width: 300px;
     border-radius: 10px;
     border: 10px solid #2d2b33;
 
@@ -152,7 +158,7 @@ header nav  {
     position:absolute;
     transform: translate(-50%);
     left:50%;
-    max-width: 400px;
+    max-width: 300px;
     border-radius: 10px;
     margin-left: auto;
     border: 10px solid #2d2b33;
@@ -160,12 +166,12 @@ header nav  {
 
 .Id_0 li a{
     position:absolute;
-    top: 430px;
+    top: 340px;
     left:25%;
     border-radius: 5px;
     background: #2d2b33;
     color:#dee3e8;
-    padding:10px 146px;
+    padding:10px 116px;
     font-size: 20px;
     white-space: nowrap;
     transform: translate(-50%);
@@ -174,12 +180,12 @@ header nav  {
 
 .Id_1 li a{
     position:absolute;
-    top: 430px;
+    top: 340px;
     left:50%;
     border-radius: 5px;
     background: #2d2b33;
     color:#dee3e8;
-    padding:10px 125px;
+    padding:10px 95px;
     font-size: 20px;
     white-space: nowrap;
     transform: translate(-50%);
@@ -191,7 +197,7 @@ header nav  {
     position:absolute;
     transform: translate(-50%);
     left:75%;
-    max-width: 400px;
+    max-width: 300px;
     border-radius: 10px;
     margin-left: auto;
     border: 10px solid #2d2b33;
@@ -200,12 +206,12 @@ header nav  {
 
 .Id_2 li a{
     position:absolute;
-    top: 430px;
+    top: 340px;
     left:75%;
     border-radius: 5px;
     background: #2d2b33;
     color:#dee3e8;
-    padding:10px 140px;
+    padding:10px 110px;
     font-size: 20px;
     white-space: nowrap;
     transform: translate(-50%);
@@ -216,7 +222,7 @@ header nav  {
     position:absolute;
     transform: translate(-50%);
     left:25%;
-    max-width: 400px;
+    max-width: 300px;
     border-radius: 10px;
     margin-left: auto;
     border: 10px solid #2d2b33;
@@ -224,12 +230,12 @@ header nav  {
 
 .Id_3 li a{
     position:absolute;
-    top: 430px;
+    top: 340px;
     left:25%;
     border-radius: 5px;
     background: #2d2b33;
     color:#dee3e8;
-    padding:10px 137px;
+    padding:10px 107px;
     font-size: 20px;
     white-space: nowrap;
     transform: translate(-50%);
@@ -247,19 +253,41 @@ header nav  {
     position:absolute;
     transform: translate(-50%);
     left:50%;
-    max-width: 400px;
+    max-width: 300px;
     border-radius: 10px;
     margin-left: auto;
     border: 10px solid #2d2b33;
 }
 .Id_4 li a{
     position:absolute;
-    top: 430px;
+    top: 340px;
     left:50%;
     border-radius: 5px;
     background: #2d2b33;
     color:#dee3e8;
-    padding:10px 173px;
+    padding:10px 143px;
+    font-size: 20px;
+    white-space: nowrap;
+    transform: translate(-50%);
+
+}
+.hero6 img {
+    position:absolute;
+    transform: translate(-50%);
+    left:75%;
+    max-width: 300px;
+    border-radius: 10px;
+    margin-left: auto;
+    border: 10px solid #2d2b33;
+}
+.Id_5 li a{
+    position:absolute;
+    top: 340px;
+    left:75%;
+    border-radius: 5px;
+    background: #2d2b33;
+    color:#dee3e8;
+    padding:10px 105px;
     font-size: 20px;
     white-space: nowrap;
     transform: translate(-50%);
