--- a/css/main.css
+++ b/css/main.css
@@ -223,3 +223,19 @@ list-style-type: none;
     transform: translate(-50%);
 }
 
+.hero00 {
+    padding-bottom: 1800px;
+    position:relative;
+    z-index: 1;
+    list-style-type: none;
+}
+.hero00 img {
+    top:200px;
+    position:absolute;
+    transform: translate(-50%);
+    left:50%;
+    max-width: 1000px;
+    border-radius: 10px;
+    margin-left: auto;
+    border: 10px solid #2d2b33;
+}
