--- a/css/main3.css
+++ b/css/main3.css
@@ -126,13 +126,26 @@ header nav  {
     top: 800px;
     position:absolute;
     margin: 0 auto;
-    padding-bottom: 600px;
 }
 .hero6 {
     width: 100%;
     top: 800px;
     position:absolute;
     margin: 0 auto;
+}
+.hero7 {
+    width: 100%;
+    top: 1300px;
+    position:absolute;
+    margin: 0 auto;
+    padding-bottom: 600px;
+}
+.hero8 {
+    width: 100%;
+    top: 1300px;
+    position:absolute;
+    margin: 0 auto;
+    
 }
 
 .hero00 {
@@ -288,6 +301,50 @@ header nav  {
     background: #2d2b33;
     color:#dee3e8;
     padding:10px 105px;
+    font-size: 20px;
+    white-space: nowrap;
+    transform: translate(-50%);
+
+}
+.hero7 img {
+    position:absolute;
+    transform: translate(-50%);
+    left:25%;
+    max-width: 300px;
+    border-radius: 10px;
+    margin-left: auto;
+    border: 10px solid #2d2b33;
+}
+.Id_6 li a{
+    position:absolute;
+    top: 340px;
+    left:25%;
+    border-radius: 5px;
+    background: #2d2b33;
+    color:#dee3e8;
+    padding:10px 95px;
+    font-size: 20px;
+    white-space: nowrap;
+    transform: translate(-50%);
+
+}
+.hero8 img {
+    position:absolute;
+    transform: translate(-50%);
+    left:50%;
+    max-width: 300px;
+    border-radius: 10px;
+    margin-left: auto;
+    border: 10px solid #2d2b33;
+}
+.Id_7 li a{
+    position:absolute;
+    top: 340px;
+    left:50%;
+    border-radius: 5px;
+    background: #2d2b33;
+    color:#dee3e8;
+    padding:10px 85px;
     font-size: 20px;
     white-space: nowrap;
     transform: translate(-50%);
