--- a/css/main4.css
+++ b/css/main4.css
@@ -145,6 +145,15 @@ header nav  {
     padding-bottom: 400px;
     transform: translate(5%);
 }
+.hero3 {
+    width: 90%;
+    left: auto;
+    top: 1200px;
+    position:absolute;
+    margin: 0 auto;
+    padding-bottom: 400px;
+    transform: translate(5%);
+}
 .hero1--info {
     background-color: #b9c0c5;
     padding-block: 40px;
@@ -187,4 +196,13 @@ header nav  {
     font-size: 30px;
     font-weight: 20px;
     white-space: nowrap;
+}
+.hero2 hero1--info h3 {
+    background-color: #292929;
+    padding-top: 40px;
+    text-align: center;
+    font-size: 30px;
+    font-weight: 30px;
+    white-space: nowrap;
+    padding-block: 10px;
 }
